--- a/config/west.yml
+++ b/config/west.yml
@@ -5,7 +5,7 @@
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: pmw3389
       import: app/west.yml
   self:
     path: config
