support mouse key

--- a/config/boards/shields/keyball44/keyball44.conf
+++ b/config/boards/shields/keyball44/keyball44.conf
@@ -7,3 +7,7 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_INVERT=y
+
+CONFIG_ZMK_USB_LOGGING=y
+
+CONFIG_ZMK_MOUSE=y
