--- a/config/boards/shields/keyball44/keyball44.dtsi
+++ b/config/boards/shields/keyball44/keyball44.dtsi
@@ -34,12 +34,12 @@
         compatible = "worldsemi,ws2812-spi";
         label = "WS2812";
 
-        /* SPI */
-        reg = <0>; /* ignored, but necessary for SPI bindings */
+
+        reg = <0>; 
         spi-max-frequency = <4000000>;
 
-        /* WS2812 */
-        chain-length = <29>; /* arbitrary; change at will */
+
+        chain-length = <10>; 
         spi-one-frame = <0x70>;
         spi-zero-frame = <0x40>;
 
@@ -84,12 +84,13 @@
             ;
 
     };
-
 };
+
 &pro_micro_i2c {
 	status = "okay";
 
 	ssd1306_ssd1306_128x32: ssd1306@3c {
+        label= "OLED";
 		compatible = "solomon,ssd1306fb";
 		reg = <0x3c>;
 		width = <128>;
