--- a/config/boards/shields/keyball44/keyball44_right.conf
+++ b/config/boards/shields/keyball44/keyball44_right.conf
@@ -3,10 +3,10 @@ CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=60
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_INVERT=y
 
+CONFIG_ZMK_MOUSE=y
